# gen-ai-utils

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  ica.py  pyproject.toml  requirements.txt
.cursor/rules/: coding-rules.mdc
archive/: pyproject.toml  pytest.ini
archive/common/utils/: custom_css_banner.py
archive/examples/: 00-extract-youtube-transcript.py
archive/gen_ai_utils/ai_engineering/: document_parser.py  embeddings.py
archive/gen_ai_utils/common/: cache.py  retry.py
archive/gen_ai_utils/data_engineering/: batch_processor.py  etl.py  validation.py
archive/gen_ai_utils/data_science/: __init__.py
archive/gen_ai_utils/openai/: assistants.py
archive/gen_ai_utils/openai/core/: __init__.py  message_processor.py
archive/llama-parse/: 01-advanced-RAG-with-LlamaParse.ipynb  02-llama-parse-script.py  LlamaParse_Standalone_File.py
archive/openai/: retrieved_thread_messages.json
archive/openai/examples/: batch-update-vector-store-files.ipynb
archive/openai/helpers/: 01-openai-retrieve-messages-by-thread.py  02-openai-consolidate-messages.py  03-user-messages-categorization.py  openai_list_thread_id.py
archive/tests/: conftest.py
archive/tests/unit/: test_pandas_helpers.py
examples/: 00-extract-arxiv-articles.py  document_parsing_example.py
fastapi/: main.py
gen_ai_utils/: __init__.py
gen_ai_utils/ai_engineering/: __init__.py  model_evaluation.py  prompt_manager.py  vector_stores.py
gen_ai_utils/common/: __init__.py  config.py  logging.py
gen_ai_utils/data_engineering/: __init__.py
gen_ai_utils/data_science/: pandas_helpers.py  statistics.py  visualization.py
gen_ai_utils/openai/: __init__.py
llama-parse/: 01-advanced-RAG-with-LlamaParse.ipynb  02-llama-parse-script-v2.py
llama-parse/parse_output/: LlamaParse - FailurePoints_RAGs_1.md  NVIDIA-10-Q-AUG.md
openai/: retrieved_user_messages.json  threads_blob.txt
openai/docs/: invoice-01_extraction.txt  invoice-05_extraction.txt  invoice-07_extraction.txt
openai/examples/: delete_vector_store_files.ipynb
openai/helpers/: 00-extract-thead-id.py  01-openai-retrieve-messages-by-thread.py  02-openai-user-messages.py  analyze_user_messages.py  openai_retrieve_thread_message.py  openai_retrieve_threads_and_messages.py  openai_retrieve_threads_users_messages.py
openai/output/: consolidated_threads_20241120_133500.md  thread_ids_20241120_132336.txt  thread_thread_0Cvq3aWl3QW0XhYfsUhoElcF_20241120_132555.json  thread_thread_0Cvq3aWl3QW0XhYfsUhoElcF_20241120_132555.md  thread_thread_0JIHmWljUm71Vi0dz08xzm74_20241120_132623.json  thread_thread_0JIHmWljUm71Vi0dz08xzm74_20241120_132623.md  (+200 more)
openai/scripts/: doc-extraction.py
tests/: __init__.py
(+3 files in other folders)
